# MIT-project-banking

./: .gitignore  README.md  mit_project_banking_pipeline.yaml  mit_project_banking_pipeline_inference.yaml  pyproject.toml  requirements.txt  training_pipeline.json
.ipynb_checkpoints/: Dockerfile-checkpoint  README-checkpoint.md  mit_project_banking_pipeline-checkpoint.yaml  pyproject-checkpoint.toml
Data/: Diccionario.xlsx
Notebooks/: Leo-notebook.ipynb  Pipeline_template.ipynb  Section+7.ipynb  config-template.yaml  fraud_model_pipeline_experiments.yaml  model.ipynb
Notebooks/.ipynb_checkpoints/: EDA EQUIPO2 v3-checkpoint.ipynb  Leo-notebook-checkpoint.ipynb  Section+7-checkpoint.ipynb
src/mit_project_banking/: config.yaml  mit_project_banking_pipeline.yaml  model_pipeline.py  pipeline-inference.py  pipeline.py
src/mit_project_banking/.ipynb_checkpoints/: config-checkpoint.yaml  mit_project_banking_pipeline-checkpoint.yaml  model_pipeline-checkpoint.py  pipeline-checkpoint.py  training_pipeline-checkpoint.json
terraform/: main.tf  provider.tf  terraform.tfvars  variables.tf
