[project]
name = "mit-project-banking"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonel481", email = "leonel.aliaga.v@gmail.com"},
    {name = "Carlos Villanueva", email = "name@gmail.com"},
    {name = "Franco Yngunza", email = "name@gmail.com"},
    {name = "Bernard Yapo", email = "name@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mit_project_banking", from = "src"}]


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.10.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
