[project]
name = "mit-project-banking"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonel481", email = "leonel.aliaga.v@gmail.com"},
    {name = "Carlos Villanueva", email = "name@gmail.com"},
    {name = "Franco Yngunza", email = "name@gmail.com"},
    {name = "Bernard Yapo", email = "name@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=1.24, <2.3.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "google-cloud-aiplatform (>=1.111.0,<2.0.0)",
    "kfp (>=2.14.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mit_project_banking", from = "src"}]


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.10.5"
jupyter = "^1.1.1"
shap = ">=0.48.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
